trunk/Archive2/b2/9775741a1e333d/output
main.cpp:3:23: error: cannot convert 'int*' to 'int (*)[2]' in initialization
 int (*ptr)[2] = &arr[1];
                       ^
